--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "querystring": "~0.2.0",
+    "react-bootstrap": "^1.0.1",
     "react-player": "^2.0.1",
     "request": "~2.83.0"
   }
