--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "cookie-parser": "1.3.2",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
