--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-player": "^2.0.1",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
