--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
+    "mongoose": "^5.9.10",
     "querystring": "~0.2.0",
     "react-bootstrap": "^1.0.1",
     "react-player": "^2.0.1",
