--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-player": "^2.0.1",
-    "react-scripts": "^2.1.1"
+    "react-scripts": "^2.1.1",
+    "react-bootstrap": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
