--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,11 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.6.3",
     "react-player": "^2.0.1",
-    "react-scripts": "^2.1.1",
-    "react-bootstrap": "^1.0.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
