--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.9.10",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "querystring": "~0.2.0",
     "request": "~2.83.0"
   }
