--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "seed": "node scripts/seedDB.js",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build",
+    "postseed": "node seeders/seed.js"
   },
   "author": "",
   "license": "ISC",
